--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ h1 {
 }
 
 article {
+    position: relative;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -208,11 +209,31 @@ article > .read-more {
     align-self: stretch;
 }
 
-/* ANIMATIONS */
-
 .hide {
     display: none;
 }
+
+.soldout {
+    order: 0;
+    position: absolute;
+    top:0;
+    left:0;
+    margin: 0;
+    padding: 6rem 0 0 0;
+    border-radius: 1rem;
+    background-color: rgba(21, 54, 38, 0.6);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 3rem;
+    color: #fbfaf8;
+    font-weight: 500;
+}
+
+
 
 /*
 https://labs.jensimmons.com/2017/03-009.html
