--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    font-size: 100%;
     padding: 1rem;
     background-color: #599075;
 }
@@ -34,18 +35,6 @@ article {
             margin: 0;
         }
 
-        main {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-        }
-
-        section {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-        }
-
     }
 
     /*TABLET & LAPTOP*/
@@ -59,14 +48,15 @@ article {
             margin: 0;
         }
 
-        #articles {
+        .productlist > section {
             display: grid;
+            max-width: 1200px;
+            margin: auto;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            /* Keep adding new columns - even if theres is no content for them. content does not always take up full width */
-            /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
-            /* Don't add more columns than theres is content for. && +content "always" take full width */
-            grid-gap: 1rem;
+            grid-gap: 60px;
+            margin-bottom: 60px;
         }
+
     }
 }
 
@@ -90,10 +80,13 @@ article {
     background-color: #fbfaf8;
 }
 
-article > img {
+.product-image {
     order: -1;
     align-self: stretch;
     border-radius: 1rem;
+    max-width: 100%;
+    height: 17rem;
+    object-fit: cover;
 }
 
 /* has a default of stretched - we don't do that on images - remember: max-width: 100%; height: auto */
@@ -103,6 +96,10 @@ article > h2 {
     color: #153626;
     font-size: 1.5rem;
     text-align: center;
+}
+
+.productImage {
+    width: 100%;
 }
 
 .tags > h3 {
@@ -177,7 +174,6 @@ article > .long-description {
 
 main {
     font-family: Avenir, Roboto, Helvetica, san-serif;
-    font-size: 80%;
 }
 
 article > .buy {
@@ -216,8 +212,8 @@ article > .read-more {
 .soldout {
     order: 0;
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     margin: 0;
     padding: 6rem 0 0 0;
     border-radius: 1rem;
