--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ article {
             margin: 0;
         }
 
-        .productlist > section {
+        .productlist {
             display: grid;
             max-width: 1200px;
             margin: auto;
@@ -85,7 +85,7 @@ article {
     align-self: stretch;
     border-radius: 1rem;
     max-width: 100%;
-    height: 17rem;
+    height: 20rem;
     object-fit: cover;
 }
 
