--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,22 @@ article > .read-more {
     font-weight: 500;
 }
 
+.modal-background {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.modal-content {
+  background-color: #fefefe;
+  border: 1px solid #7c1f17;
+  margin: 1em;
+  padding: 2em;
+}
+
 
 
 /*
