--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,24 @@
     box-sizing: border-box;
 }
 
+:root {
+    --background-color: #fbfaf8;
+    --accent-color: #f6ca6a;
+    --main-color: #235a3f;
+    --secondary-color: #dddfc4;
+    --font-header-links: 'Avenir';
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-size: 100%;
-    padding: 1rem;
-    background-color: #599075;
+    padding: 0;
+    margin: 0;
+    background-color: #a0b59f;
+    font-family: Avenir, Roboto, Helvetica, san-serif;
 }
 
 main {
@@ -48,13 +62,21 @@ article {
             margin: 0;
         }
 
-        .productlist {
+        .productlist > section {
             display: grid;
             max-width: 1200px;
             margin: auto;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             grid-gap: 60px;
             margin-bottom: 60px;
+            text-align: center;
+        }
+
+        .productlist > section > h1 {
+            grid-column: 1/-1;
+            margin-bottom: -30px;
+            display: flex;
+            justify-content: flex-start;
         }
 
     }
@@ -63,12 +85,49 @@ article {
 
 /* END @supports grid */
 
-h1 {
-    color: #fbfaf8;
+header {
+    padding: 2rem 7rem;
+    margin: 0;
+    background-color: var(--main-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: space-around;
+    align-items: center;
+}
+
+header nav a {
+    margin: 0 0 0 3rem;
+    color: var(--background-color);
+    text-decoration: none;
+}
+
+.headertext {
+    color: var(--background-color);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: var(--font-header-links);
+}
+
+.title {
     font-size: 2rem;
 }
 
-article {
+h1 {
+    color: #fbfaf8;
+    font-size: 4rem;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.item {
     position: relative;
     display: flex;
     flex-flow: column;
@@ -80,8 +139,18 @@ article {
     background-color: #fbfaf8;
 }
 
+.productbody {
+    max-width: 90%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    margin-bottom: 2rem;
+    padding: 0;
+    border: none;
+    border-radius: 1rem;
+}
+
 .product-image {
-    order: -1;
     align-self: stretch;
     border-radius: 1rem;
     max-width: 100%;
@@ -96,6 +165,7 @@ article > h2 {
     color: #153626;
     font-size: 1.5rem;
     text-align: center;
+    order: 1;
 }
 
 .productImage {
@@ -113,6 +183,7 @@ article > h2 {
     flex-direction: row;
     align-content: space-between;
     align-items: baseline;
+    justify-content: center;
     margin: auto 0 1rem 0;
 }
 
@@ -148,6 +219,7 @@ article > .long-description {
     flex-direction: row;
     align-content: space-between;
     align-items: baseline;
+    justify-content: center;
     margin: auto 0 3rem 0;
 }
 
@@ -172,15 +244,11 @@ article > .long-description {
     margin: 0 0.3rem;
 }
 
-main {
-    font-family: Avenir, Roboto, Helvetica, san-serif;
-}
-
-article > .buy {
+.buy {
     margin-top: auto;
     /* to push it to the bottom of the box & margin-top: auto takes the available space */
-    margin-left: 1rem;
-    margin-right: 1rem;
+    width: 100%;
+
     background: #f6c03e;
     color: #fbfaf8;
     padding: 0.5rem;
@@ -190,11 +258,10 @@ article > .buy {
     align-self: stretch;
 }
 
-article > .read-more {
+.read-more {
     margin-top: 1rem;
     margin-bottom: 3rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    width: 100%;
     color: #f6c03e;
     padding: 0.5rem;
     border-style: solid;
@@ -217,7 +284,7 @@ article > .read-more {
     margin: 0;
     padding: 6rem 0 0 0;
     border-radius: 1rem;
-    background-color: rgba(21, 54, 38, 0.6);
+    background-color: rgba(21, 54, 38, 0.45);
     width: 100%;
     height: 100%;
     display: flex;
@@ -230,19 +297,20 @@ article > .read-more {
 }
 
 .modal-background {
-  position: fixed;
-  z-index: 10;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
 }
+
 .modal-content {
-  background-color: #fefefe;
-  border: 1px solid #7c1f17;
-  margin: 1em;
-  padding: 2em;
+    background-color: #fefefe;
+    border: 1px solid #7c1f17;
+    margin: 1em;
+    padding: 2em;
 }
 
 
