--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     font-size: 100%;
     padding: 0;
     margin: 0;
-    background-color: #a0b59f;
+    background-color: var(--secondary-color);
     font-family: Avenir, Roboto, Helvetica, san-serif;
 }
 
@@ -30,6 +30,44 @@ main {
     margin: 0 auto;
 }
 
+header {
+    padding: 2rem 7rem;
+    margin: 0;
+    background-color: var(--main-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: space-around;
+    align-items: center;
+}
+
+header nav a {
+    margin: 0 0 0 3rem;
+    color: var(--background-color);
+    text-decoration: none;
+}
+
+.headertext {
+    color: var(--background-color);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: var(--font-header-links);
+    margin: 0;
+}
+
+.title {
+    font-size: 2rem;
+}
+
+
 article {
     margin: 1rem 0;
 }
@@ -37,22 +75,43 @@ article {
 /* CSS that applies to browsers that support grid */
 @supports (display: grid) {
 
-    /*MOBILE*/
-    @media only screen and (max-width: 599px) {
+    /*MOBILE+TABLET*/
+    @media only screen and (max-width: 799px) {
 
         main {
             max-width: none;
             margin: 0;
+            margin: 0 1rem;
         }
 
         article {
             margin: 0;
         }
 
+        header {
+            margin: 0;
+            padding: 1rem;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+                flex-wrap:wrap;
+        }
+
+        header nav {
+            justify-content: center;
+            align-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        header nav a {
+            margin: 0.5rem;
+        }
+
     }
 
     /*TABLET & LAPTOP*/
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 800px) {
         main {
             max-width: none;
             margin: 0;
@@ -85,43 +144,9 @@ article {
 
 /* END @supports grid */
 
-header {
-    padding: 2rem 7rem;
-    margin: 0;
-    background-color: var(--main-color);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-content: space-around;
-    align-items: center;
-}
-
-header nav a {
-    margin: 0 0 0 3rem;
-    color: var(--background-color);
-    text-decoration: none;
-}
-
-.headertext {
-    color: var(--background-color);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: var(--font-header-links);
-}
-
-.title {
-    font-size: 2rem;
-}
 
 h1 {
-    color: #fbfaf8;
+    color: var(--main-color);
     font-size: 4rem;
     text-transform: capitalize;
     font-weight: 500;
@@ -136,11 +161,10 @@ h1 {
     padding: 0;
     border: none;
     border-radius: 1rem;
-    background-color: #fbfaf8;
+    background-color: var(--background-color);
 }
 
 .productbody {
-    max-width: 90%;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -162,7 +186,7 @@ h1 {
 
 article > h2 {
     margin: 3rem 0 0.5rem 0;
-    color: #153626;
+    color: var(--main-color);
     font-size: 1.5rem;
     text-align: center;
     order: 1;
@@ -224,21 +248,21 @@ article > .long-description {
 }
 
 .vegetarian {
-    background-color: #dddfc4;
+    background-color: var(--secondary-color);
     padding: 0.1rem 1rem;
     border-radius: 1rem;
     margin: 0 0.3rem;
 }
 
 .alcohol {
-    background-color: #dddfc4;
+    background-color: var(--secondary-color);
     padding: 0.1rem 1rem;
     border-radius: 1rem;
     margin: 0 0.3rem;
 }
 
 .allergens {
-    background-color: #dddfc4;
+    background-color: var(--secondary-color);
     padding: 0.1rem 1rem;
     border-radius: 1rem;
     margin: 0 0.3rem;
@@ -249,8 +273,8 @@ article > .long-description {
     /* to push it to the bottom of the box & margin-top: auto takes the available space */
     width: 100%;
 
-    background: #f6c03e;
-    color: #fbfaf8;
+    background: var(--accent-color);
+    color: var(--background-color);
     padding: 0.5rem;
     border: none;
     border-radius: 2rem;
@@ -262,12 +286,12 @@ article > .long-description {
     margin-top: 1rem;
     margin-bottom: 3rem;
     width: 100%;
-    color: #f6c03e;
+    color: var(--accent-color);
     padding: 0.5rem;
     border-style: solid;
-    background-color: #fbfaf8;
+    background-color: var(--background-color);
     border-radius: 2rem;
-    border-color: #f6c03e;
+    border-color: var(--accent-color);
     font-size: 1.2rem;
     align-self: stretch;
 }
@@ -292,7 +316,7 @@ article > .long-description {
     justify-content: center;
     align-items: flex-start;
     font-size: 3rem;
-    color: #fbfaf8;
+    color: var(--background-color);
     font-weight: 500;
 }
 
@@ -304,13 +328,24 @@ article > .long-description {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
 }
 
 .modal-content {
-    background-color: #fefefe;
-    border: 1px solid #7c1f17;
+    width: 50%;
+    height: 50%;
+    background-color: var(--background-color);
     margin: 1em;
     padding: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 
