--- a/css/style.css
+++ b/css/style.css
@@ -328,14 +328,12 @@ article > .long-description {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-
 }
 
 .modal-content {
+    position:fixed;
+    top: 25vh;
+    left: 25vw;
     width: 50%;
     height: 50%;
     background-color: var(--background-color);
